# real-time-stock-price-scraper

./: Cargo.toml  readme.MD
env/: config.yml
src/: fetch.rs  main.rs
