[package]
name = "real-time-stock-price-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
flate2 = "1"
plotters = "0.3"
gnuplot = "0.0.43"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
